Many Fixes, Changes
Added better notifications
Added beter opts
Added some dependencies
Created better agent handling

--- a/com.wrapper.utilities.vpn.plist
+++ b/com.wrapper.utilities.vpn.plist
@@ -7,7 +7,7 @@
   <key>ProgramArguments</key>
   <array>
     <string>/usr/local/bin/vpn</string>
-    <string>monitor</string>
+    <string>--monitor</string>
   </array>
   <key>StartInterval</key>
     <integer>30</integer>
